tests/ui/rfc-2126-crate-paths/keyword-crate-as-identifier.rs
fn main() {
    let crate = 0;
    //~^ ERROR expected unit struct, unit variant or constant, found module `crate`
}

// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
